methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:2: error: '(' expected but identifier found.
def hunt() {while estSurBiscuit == false {
                  ^